Dropdown menu mobile styling, focus behaviour, alignment and overflow fixes. (#814)
This PR does the following:

* Add vertical styling for the image upload dropdown menu, to fix the mobile overflow.
* Give the image upload dropdown menu's buttons the correct hover effect. (Partially solving !important flag issues)
* Add max-width to image input box to handle large file names.
* ~~Apply :focus-within for dropdown menu only on .actions and mobile breakpoints, instead of globally.~~
* Fix position of image dropdown menu on post-create error page.
* Add wrapping to actions row on small width screens.
* Style image + btn-link on edit pages that have images attached.
* Fix hidden dropdown menu on smaller media breakpoints.
* Fix option dropdown overflow/alignment on tablet breakpoint.
* Add higher z-index for :hover state, so mouse users see what they are hovering.

Pictures of changes:
https://codeberg.org/Kbin/kbin-core/pulls/814#issuecomment-993648

I'd also appreciate if anyone could test these changes. Splitting the dropdown button styling from the !important flags could have some edge cases I didn't account for. Although I think it should be ok.

Reviewed-on: https://codeberg.org/Kbin/kbin-core/pulls/814
Co-committed-by: Frankz <Frankz@noreply.codeberg.org>

--- a/assets/styles/components/_dropdown.scss
+++ b/assets/styles/components/_dropdown.scss
@@ -27,8 +27,7 @@ $transition: 180ms all 120ms ease-out;
       padding: 0;
     }
 
-
-    a, button {
+    a {
       color: var(--kbin-meta-link-color) !important;
       font-weight: normal !important;
       border: 0 !important;
@@ -48,6 +47,35 @@ $transition: 180ms all 120ms ease-out;
         font-weight: bold !important;
       }
     }
+
+    button {
+      color: var(--kbin-button-secondary-text-color);
+      background: var(--kbin-button-secondary-bg);
+      font-weight: normal;
+      display: block;
+      padding: .5rem 1rem;
+      width: 100%;
+
+      &:hover {
+        color: var(--kbin-button-secondary-text-hover-color);
+        background: var(--kbin-button-secondary-hover-bg);
+      }
+
+      &.active {
+        font-weight: bold;
+      }
+    }
+  }
+
+  .dropdown__menu > li button {
+    padding: .5rem 1rem;
+    text-align: left;
+    border-radius: 0 !important;
+
+    &:hover {
+      color: var(--kbin-meta-link-hover-color);
+      background: var(--kbin-bg);
+    }
   }
 
   &:hover,
@@ -58,5 +86,14 @@ $transition: 180ms all 120ms ease-out;
       transition: visibility 0s, opacity .2s;
       opacity: 1;
     }
+  }
+
+  &:hover {
+    z-index: 101;
+  }
+
+  &:focus-within > .btn__secondary {
+    color: var(--kbin-button-secondary-text-hover-color) !important;
+    background: var(--kbin-button-secondary-hover-bg);
   }
 }
