--- a/assets/styles/layout/_options.scss
+++ b/assets/styles/layout/_options.scss
@@ -17,16 +17,15 @@
   .dropdown:hover,
   .dropdown:focus-within{
 
-      .dropdown__menu {
-        @include media-breakpoint-down(sm){
-          left: auto;
-          top: 100%;
-          transform: none;
-          right: 0;
-          min-width: 10rem;
-        }
+    .dropdown__menu {
+      @include media-breakpoint-down(lg){
+        left: auto;
+        top: 100%;
+        transform: none;
+        right: 0;
+        min-width: 10rem;
       }
-  
+    }
   }
 
  &__layout{
